--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <title>INPUT</title>
+        <title>Social</title>
         <meta charset="utf-8">
         <link rel="stylesheet" href="src/css/style.css">
         <link rel="preconnect" href="https://fonts.googleapis.com">
