--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 
     <body>
         <div id="b_login">
-        <img src="src/images/logo.jpg" alt="logo">
+        <img src="https://firsguss.github.io/port_f/src/images/logo.png" alt="logo">
         <p id="pl">Please, login</p>
         <form>
             <input id="login" type="email" placeholder="Login">
