--- a/index.html
+++ b/index.html
@@ -1,10 +1,9 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <title>Social</title>
+        <title>INPUT</title>
         <meta charset="utf-8">
-        <meta name="viewport" content="width=device-width, initial-scale=1">
-        <link rel="stylesheet" href="https://firsguss.github.io/port_f/src/css/style.css">
+        <link rel="stylesheet" href="src/css/style.css">
         <link rel="preconnect" href="https://fonts.googleapis.com">
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 <link href="https://fonts.googleapis.com/css2?family=Rubik:wght@300&display=swap" rel="stylesheet"> 
@@ -12,8 +11,9 @@
     </head>
 
     <body>
+        <div id="content">
         <div id="b_login">
-        <img src="https://firsguss.github.io/port_f/src/images/logo.png" alt="logo">
+        <img src="src/images/logo.jpg" alt="logo">
         <p id="pl">Please, login</p>
         <form>
             <input id="login" type="email" placeholder="Login">
@@ -26,5 +26,9 @@
         </div>
         <hr />
         <a id="author" href="https://vk.com/ricsa_already" target="_blank">Ricsa</a>
+        </div>  
+        <div id="foot">
+            <p id="prew">© 2021 Social Inc</p>
+        </div>
     </body>
 </html>
