--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
     <head>
         <title>INPUT</title>
         <meta charset="utf-8">
-        <link rel="stylesheet" href="https://firsguss.github.io/port_f/src/images/logo.png">
+        <link rel="stylesheet" href="src/css/style.css">
         <link rel="preconnect" href="https://fonts.googleapis.com">
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 <link href="https://fonts.googleapis.com/css2?family=Rubik:wght@300&display=swap" rel="stylesheet"> 
@@ -13,7 +13,7 @@
     <body>
         <div id="content">
         <div id="b_login">
-        <img src="src/images/logo.jpg" alt="logo">
+        <img src="https://firsguss.github.io/port_f/src/images/logo.png" alt="logo">
         <p id="pl">Please, login</p>
         <form>
             <input id="login" type="email" placeholder="Login">
